[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pegs/Yellow/Powerups/Scattershot/Scattershot-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Pegs/Yellow/Powerups/Scattershot/ScattershotBall.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.17969

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, -50, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.968627, 1, 0.682353, 1 )

[node name="ScattershotBall" type="RigidBody2D"]
collision_layer = 0
mass = 2.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="CanBeDeletedTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
lifetime = 2.0
local_coords = false
process_material = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="queue_free"]
[connection signal="timeout" from="Timer" to="." method="spawn_particles"]
[connection signal="timeout" from="CanBeDeletedTimer" to="." method="set_can_be_deleted" binds= [ true ]]
